<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editTextCompanyNameID"
            android:layout_width="350dp"
            android:layout_height="34dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:paddingEnd="0dp"
            android:paddingStart="2dp" />
        <EditText
            android:id="@+id/editTextAddressID"
            android:layout_width="350dp"
            android:layout_height="34dp"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:imeOptions="actionNext"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"/>
        <EditText
            android:id="@+id/editTextNidID"
            android:layout_width="350dp"
            android:layout_height="36dp"
            android:layout_marginTop="110dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/nid"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"/>
        <EditText
            android:id="@+id/editTextTinID"
            android:layout_width="350dp"
            android:layout_height="36dp"
            android:layout_marginTop="160dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/tin"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"/>
        <EditText
            android:id="@+id/editTextTradeLicenseID"
            android:layout_width="350dp"
            android:layout_height="36dp"
            android:layout_marginTop="210dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/trade_license"
            android:imeOptions="actionNext"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/editTextCompanyProfileID"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="260dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/company_profile"
            android:gravity="top|start"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:paddingEnd="0dp"
            android:paddingStart="2dp"/>
        <CheckBox
            android:id="@+id/checkBoxSignUpID"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="370dp"
            android:text="@string/i_agree"/>
        <TextView
            android:id="@+id/textViewTermsCondition"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="225dp"
            android:layout_marginTop="370dp"
            android:text="@string/terms_condition"
            android:textColor="#f551ed"
            android:textStyle="italic"/>
        <Button
            android:id="@+id/buttonSignUpID"
            android:layout_width="226dp"
            android:layout_height="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="420dp"
            android:background="#57aaf9"
            android:text="@string/sign_up_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
    </RelativeLayout>



</ScrollView>